--- a/generator/templates/main.j2
+++ b/generator/templates/main.j2
@@ -16,7 +16,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block title %}{% endblock %} - Dylan Majewski</title>
+    <title>{% block title %}{{title}}{% endblock %} - Dylan Majewski</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link {%block stylesheet%} rel="stylesheet" type="text/css" media="screen" href="../static/main.css"{% endblock  %}>
     <script {% block script %}{% endblock %}></script>
